--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -101,7 +101,7 @@
 //  border: 2px solid rgb(255, 0, 0);
           z-index: 2;
 
-  width: 250vw;
+  width: 250px;
   height: 150px;
   margin-right: 10px;
   transition: transform 100ms ease-out, border-radius 200ms ease-out;
@@ -111,7 +111,7 @@
  object-fit: cover;
 //   background: white;
   z-index: 6;
-  
+  // height: 90%;
   width: 100%;
   // height:150px;
   border-radius: 10px 10px 0 0;
@@ -166,9 +166,9 @@
 }
 
 .play-card-btn{
-  height: 20px;
+  height: 18px;
   align-content: center;
-                            width: 25px;
+                            width: 23px;
                             border-radius: 50%;
                             border: 1px solid rgb(68, 68, 68);
                             color: rgb(0, 0, 0);
@@ -178,7 +178,7 @@
                             font-weight: 200;
                             background-color: #ffffff;
                             // background-color: #2C2C2E;
-                            font-size: 15px;
+                            font-size: 3px;
                             margin-right: 10px;
 }
 
@@ -198,8 +198,14 @@
                             font-weight: 100;
                             // background-color: #ffffff;
                             background-color: #2C2C2E;
-                            font-size: 15px;
+                            font-size: 13px;
                             margin-right: 5px;
+                            margin-bottom: 10px;
+
+                            &:hover{
+                            border-color: rgb(255, 255, 255);
+
+                            }
 }
 
 .movie-show-page-btn{
@@ -217,6 +223,12 @@
                             background-color: #2C2C2E;
                             font-size: 15px;
                             margin-right: 5px;
+                            border-color: rgb(114, 114, 114);
+
+                            &:hover{
+                            border-color: rgb(255, 255, 255);
+
+                            }
 }
 
 .movie-card-genre-list{
@@ -227,4 +239,8 @@
       font-size: 10px;
       margin-left: 5px;
     }
+}
+
+.right-btns{
+  display: flex;
 }
