--- a/app/assets/stylesheets/movie_show_page.scss
+++ b/app/assets/stylesheets/movie_show_page.scss
@@ -72,6 +72,7 @@
                     font-size: 25px;
                     font-weight: 200;
                     border: none;
+                    cursor: pointer;
                 // border: 3px solid red;
 
                 }
@@ -149,6 +150,7 @@
                             font-size: 20px;
                             margin-right: 10px;
                             font-weight: bold;
+                            cursor: pointer;
                             // margin-bottom: 5px;
                             
                 // border: 3px solid red;
