--- a/app/assets/stylesheets/featured_movie.scss
+++ b/app/assets/stylesheets/featured_movie.scss
@@ -60,6 +60,7 @@
     justify-content: flex-start;
     // margin-top: 10px;
      margin-bottom: 5px;
+     cursor: pointer;
     
     
 
@@ -77,6 +78,8 @@
         // width: 120px;
         border-radius: 10px;
         letter-spacing: 1px;
+        padding: 20px;
+        cursor: pointer;
        
     }
 
@@ -90,6 +93,9 @@
         font-size: 20px;
         border-radius: 10px;
         font-weight: bold;
+        cursor: pointer;
+        padding: 20px;
+
 
         &:hover{
             background-color: opacity(.4);
