--- a/app/assets/stylesheets/browse_header.scss
+++ b/app/assets/stylesheets/browse_header.scss
@@ -47,6 +47,7 @@
 
 .settings-container{
     // border: 4px solid rgb(17, 0, 255);
+    display: flex;
     margin-right: 90px;
     margin-top: 12px;
 }
